@@ -7,8 +7,11 @@
 #' details.
 #' @param user A user name
 #' @param pwd A password
-#' @param type One of localhost, cloudant, or iriscouch. This is what's used to determine
-#' how to structure the URL to make the request.
+#' @param base A base URL, not needed if \code{type=localhost|cloudant|iriscouch}. Though
+#' you can pass a base URL in here to override anything done internally.
+#' @param type One of localhost, cloudant, iriscouch, or \code{NULL}. This is what's
+#' used to determine how to structure the URL to make the request. If left to the
+#' default of \code{NULL}, you must pass in a base URL.
 #' @param port Port. Only applies when type is localhost. Default: 5984
 #' @param authfile Path to file with cushions (authentication details)
 #' @details Setup for authentication:
@@ -38,12 +41,14 @@
 #' cushion('julies_iris', user='name', pwd='pwd', type="iriscouch")
 #' cushion('adfafafafadf', user='name', pwd='pwd', type="localhost", port=2300)
 #' cushions()
+#'
+#' cushion("oceancouch", base="http://104.236.176.205", port=5984)
 #' }
 
 #' @export
 #' @rdname authentication
-cushion <- function(name, user=NULL, pwd=NULL, type, port=5984){
-  assign(name, list(user=user, pwd=pwd, type=type, port=port), envir = SofaAuthCache)
+cushion <- function(name, user=NULL, pwd=NULL, base=NULL, type=NULL, port=5984){
+  assign(name, list(user=user, pwd=pwd, base=base, type=type, port=port), envir = SofaAuthCache)
 }
 
 #' @export
@@ -72,23 +77,12 @@ makelist <- function(x){
   structure(list(tmp), .Names=aname)
 }
 
-# cushions <- function()
-# {
-#   if(length(ls(SofaAuthCache)) == 0){
-#     vals <- names(.Options)
-#     temp <- .Options[grep('sofa', vals)]
-#   } else { temp <- mget(ls(SofaAuthCache), envir=SofaAuthCache) }
-#   if(length(temp) == 0)
-#     stop("No auth details found")
-#   else
-#     lapply(temp, function(x) structure(x, class="sofa_profile"))
-# }
-
 #' @export
 print.sofa_profile <- function(x, ...){
   cat("<sofa profile> ", sep = "\n")
   cat(paste0("   user : ", x$user), sep = "\n")
   cat(paste0("   pwd  : ", x$pwd), sep = "\n")
+  cat(paste0("   base : ", x$base), sep = "\n")
   cat(paste0("   type : ", x$type), sep = "\n")
   cat(paste0("   port : ", x$port), sep = "\n")
 }
@@ -97,7 +91,7 @@ print.sofa_profile <- function(x, ...){
 SofaAuthCache <- new.env(hash=TRUE)
 
 .onLoad <- function(...) {
-  assign("localhost", list(user=NULL, pwd=NULL, type="localhost", port=5984), envir = SofaAuthCache)
+  assign("localhost", list(user=NULL, pwd=NULL, base=NULL, type="localhost", port=5984), envir = SofaAuthCache)
 }
 
 get_cushion <- function(x){
@@ -105,24 +99,3 @@ get_cushion <- function(x){
   res <- profs[ names(profs) %in% x ]
   if(length(res) == 0) stop(paste0(x, " not found, see ?cushion and ?profiles")) else res[[1]]
 }
-
-
-# get_pwd <- function(u=NULL,p=NULL,service)
-# {
-#   auth <- cushions()
-# #   ser <- paste0('sofa_',service)
-#
-#   if(is.null(u) | is.null(p)){
-#     temp <- grep(service, names(auth))
-#     if(identical(temp,integer(0)))
-#       stop('Auth details not found')
-#     username <- auth[temp][[1]][[1]]
-#     pwd <- auth[temp][[1]][[2]]
-#     out <- list(username,pwd)
-#   }
-#
-#   if(is.null(username) | is.null(pwd))
-#     stop("You must supply your username and password for Cloudant or Iriscouch\nOptionally, set your username and password in options, see vignette")
-#
-#   return(out)
-# }
