@@ -23,6 +23,7 @@
 #' doc_get(dbname="sofadb", docid="a_beer", revs=TRUE, local_seq=TRUE)
 #' doc_get("cloudant", dbname='gaugesdb_ro', docid='017ba8075b92656bbca20b8ab6fdb21d')
 #' doc_get("iriscouch", dbname='helloworld', docid="0c0858b75a81c464a74119ca24000543")
+#' doc_get("oceancouch", dbname="beard", docid="beer")
 #' }
 
 doc_get <- function(cushion="localhost", dbname, docid, rev=NULL, attachments=FALSE, deleted=FALSE,
@@ -33,9 +34,14 @@ doc_get <- function(cushion="localhost", dbname, docid, rev=NULL, attachments=FA
   args <- sc(list(rev=rev, attachments=asl(attachments), deleted=asl(deleted), revs=asl(revs),
                   revs_info=asl(revs_info), conflicts=asl(conflicts),
                   deleted_conflicts=asl(deleted_conflicts), local_seq=asl(local_seq)))
-  if(cushion$type=="localhost"){
-    sofa_GET(sprintf("http://127.0.0.1:%s/%s/%s", cushion$port, dbname, docid), as, query=args, ...)
-  } else if(cushion$type %in% c("cloudant",'iriscouch')){
-    sofa_GET(file.path(remote_url(cushion, dbname), docid), as, query=args, ...)
+  if(is.null(cushion$type)){
+    url <- pick_url(cushion)
+    sofa_GET(sprintf("%s%s/%s", url, dbname, docid), as, query=args, ...)
+  } else {
+    if(cushion$type=="localhost"){
+      sofa_GET(sprintf("http://127.0.0.1:%s/%s/%s", cushion$port, dbname, docid), as, query=args, ...)
+    } else if(cushion$type %in% c("cloudant",'iriscouch')){
+      sofa_GET(file.path(remote_url(cushion, dbname), docid), as, query=args, ...)
+    }
   }
 }
