@@ -95,11 +95,15 @@ sofa_COPY <- function(url, as = 'list',...){
 # }
 
 pick_url <- function(x){
-  switch(x$type,
-         localhost = sprintf("http://127.0.0.1:%s/", x$port),
-         cloudant = cloudant_url(x),
-         iriscouch = iris_url(x)
-  )
+  if(is.null(x$type)){
+    if(is.null(x$port)) paste0(x$base, "/") else sprintf("%s:%s/", x$base, x$port)
+  } else {
+    switch(x$type,
+           localhost = sprintf("http://127.0.0.1:%s/", x$port),
+           cloudant = cloudant_url(x),
+           iriscouch = iris_url(x)
+    )
+  }
 }
 
 check_inputs <- function(x){
